# electricity-map-data-exploration

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: clustering.py
